Fix message text wrapping

--- a/css/app.styl
+++ b/css/app.styl
@@ -228,6 +228,7 @@ body
   .text
     margin-left: AVATAR_SIZE + SPACING_SIZE
     margin-top: 4px
+    overflow-wrap: break-word
     .highlight
       background-color: HIGHLIGHT
   p
